--- a/src/Acme/UsersBundle/Resources/views/Users/register.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/Users/register.html.twig
@@ -1,5 +1,20 @@
-<form action="{{ path('acme_users_create')}}" method="post" {{ form_enctype(form) }}>
-    {{ form_widget(form) }}
+{% extends 'AcmeUsersBundle::index.html.twig' %}
 
-    <input type="submit" />
-</form>
+{% block title %}Register{% endblock %}
+{% block content %}
+    
+    
+    <section class="content">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <form class="well form-horizontal" action="{{ path('acme_users_create')}}" method="post" {{ form_enctype(form) }}>
+                {{ form_widget(form) }}
+
+                <input type="submit" class="btn btn-primary" />
+                </form>
+            </div>
+        </div>
+    </section>
+
+{% endblock %}
