--- a/src/Acme/UsersBundle/Resources/views/Users/register.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/Users/register.html.twig
@@ -9,9 +9,51 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <form class="well form-horizontal" action="{{ path('acme_users_create')}}" method="post" {{ form_enctype(form) }}>
-                {{ form_widget(form) }}
-
-                <input type="submit" class="btn btn-primary" />
+                    <fieldset>
+                        <div class="form-group {% if form.user.name.vars.valid==false %}has-error{% endif %}">
+                            {{ form_label(form.user.name, 'Username', {'label_attr': {'class': 'control-label'}}) }}
+                            <div class="controls">
+                                {{form_widget(form.user.name)}}
+                                {% if form.user.name.vars.valid==false %}
+                                    <div class="help-block">
+                                        {{ form_errors(form.user.name) }}
+                                    </div>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="form-group {% if form.user.password.vars.valid==false %}has-error{% endif %}">
+                            {{ form_label(form.user.password, 'Password', {'label_attr': {'class': 'control-label'}}) }}
+                            <div class="controls">
+                                {{form_widget(form.user.password.password)}}
+                                {% if form.user.password.password.vars.valid==false %}
+                                    <div class="help-block">
+                                        {{ form_errors(form.user.password.password) }}
+                                    </div>
+                                {% endif %}
+                                <br />
+                                {{form_widget(form.user.password.confirm)}}
+                                {% if form.user.password.confirm.vars.valid==false %}
+                                    <div class="help-block">
+                                        {{ form_errors(form.user.password.confirm) }}
+                                    </div>
+                                {% endif %}
+                                
+                            </div>
+                        </div>
+                        <div class="form-group {% if form.terms.vars.valid==false %}has-error{% endif %}">
+                            {{ form_label(form.terms, 'Terms', {'label_attr': {'class': 'control-label'}}) }}
+                            <div class="controls">
+                                {{form_widget(form.terms)}}
+                                {% if form.terms.vars.valid==false %}
+                                    <div class="help-block">
+                                        {{ form_errors(form.terms) }}
+                                    </div>
+                                {% endif %}
+                            </div>
+                        </div>
+                        {{ form_rest(form) }}
+                        <input type="submit" class="btn btn-primary" />
+                </fieldset>
                 </form>
             </div>
         </div>
