--- a/src/Acme/UsersBundle/Resources/views/Users/show.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/Users/show.html.twig
@@ -15,6 +15,7 @@
                     {% for user in users %}
                         <tr>
                             <td><p>{{ user.name }}</p></td>
+                            <td style="text-align: right;"><a href="{{ path('acme_users_edit', {'id':user.id}) }}">Edit</a></td>
                         </tr>
                     {% endfor %}
                     </tbody>
