--- a/src/Acme/UsersBundle/Resources/views/Users/edit.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/Users/edit.html.twig
@@ -10,24 +10,31 @@
             <div class="col-md-6">
                 <form class="well form-horizontal" action="" method="post" {{ form_enctype(form) }}>
                     <fieldset>
-                        <div class="form-group {% if form.name.vars.valid==false %}has-error{% endif %}">
-                            {{ form_label(form.name, 'Username', {'label_attr': {'class': 'control-label'}}) }}
+                        <div class="form-group {% if form.user.name.vars.valid==false %}has-error{% endif %}">
+                            {{ form_label(form.user.name, 'Username', {'label_attr': {'class': 'control-label'}}) }}
                             <div class="controls">
-                                {{form_widget(form.name)}}
-                                {% if form.name.vars.valid==false %}
+                                {{form_widget(form.user.name)}}
+                                {% if form.user.name.vars.valid==false %}
                                     <div class="help-block">
-                                        {{ form_errors(form.name) }}
+                                        {{ form_errors(form.user.name) }}
                                     </div>
                                 {% endif %}
                             </div>
                         </div>
-                        <div class="form-group {% if form.password.vars.valid==false %}has-error{% endif %}">
-                            {{ form_label(form.password, 'Password', {'label_attr': {'class': 'control-label'}}) }}
+                        <div class="form-group {% if form.user.password.vars.valid==false %}has-error{% endif %}">
+                            {{ form_label(form.user.password, 'Password', {'label_attr': {'class': 'control-label'}}) }}
                             <div class="controls">
-                                {{form_widget(form.password)}}
-                                {% if form.password.vars.valid==false %}
+                                {{form_widget(form.user.password.password)}}
+                                {% if form.user.password.password.vars.valid==false %}
                                     <div class="help-block">
-                                        {{ form_errors(form.password) }}
+                                        {{ form_errors(form.user.password.password) }}
+                                    </div>
+                                {% endif %}
+                                <br />
+                                {{form_widget(form.user.password.confirm)}}
+                                {% if form.user.password.confirm.vars.valid==false %}
+                                    <div class="help-block">
+                                        {{ form_errors(form.user.password.confirm) }}
                                     </div>
                                 {% endif %}
                                 
