--- a/src/Acme/UsersBundle/Resources/views/Users/show.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/Users/show.html.twig
@@ -9,6 +9,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <a href="{{ path('acme_users_create') }}" class="btn btn-primary">Add</a>
+                <a href="{{ path('logout') }}" class="btn btn-primary">Logout</a>
                 <hr />
                 {% for flash_message in app.session.flashbag.get('notice') %}
                 <div class="callout callout-info lead">
