--- a/src/Acme/UsersBundle/Resources/views/Users/create.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/Users/create.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AcmeUsersBundle::index.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Create{% endblock %}
 {% block content %}
     
     
@@ -13,9 +13,8 @@
                     {{ flash_message }}
                 </div>
                 {% endfor %}
-                <p class="login-box-msg">Register</p>
-                <a href="{{ path('acme_users_login')}}">Login</a>
-                <form class="well form-horizontal" action="{{ path('acme_users_register')}}" method="post" {{ form_enctype(form) }}>
+                <p class="login-box-msg">Create user</p>
+                <form class="well form-horizontal" action="{{ path('acme_users_create')}}" method="post" {{ form_enctype(form) }}>
                     <fieldset>
                         <div class="form-group {% if form.user.name.vars.valid==false %}has-error{% endif %}">
                             {{ form_label(form.user.name, 'Username', {'label_attr': {'class': 'control-label'}}) }}
@@ -45,17 +44,6 @@
                                     </div>
                                 {% endif %}
                                 
-                            </div>
-                        </div>
-                        <div class="form-group {% if form.terms.vars.valid==false %}has-error{% endif %}">
-                            {{ form_label(form.terms, 'Terms', {'label_attr': {'class': 'control-label'}}) }}
-                            <div class="controls">
-                                {{form_widget(form.terms)}}
-                                {% if form.terms.vars.valid==false %}
-                                    <div class="help-block">
-                                        {{ form_errors(form.terms) }}
-                                    </div>
-                                {% endif %}
                             </div>
                         </div>
                         {{ form_rest(form) }}
