--- a/src/Acme/UsersBundle/Resources/views/security/login.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/security/login.html.twig
@@ -20,6 +20,7 @@
         
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
         <button type="submit">login</button>
+        <a href="{{ path('acme_users_register')}}">Register</a>
     </form>
     
 {% endblock %}
