--- a/src/Acme/UsersBundle/Resources/views/index.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'AcmeUsersBundle::base.html.twig' %}
 
 {% block title %}Users{% endblock %}
 {% block stylesheets %}
@@ -23,8 +23,6 @@
         <div class="content-wrapper" style="min-height: 946px;">
             
             {% block content %}
-
-
             {% endblock %}
         </div>
     </div>
