--- a/src/Acme/UsersBundle/Resources/views/security/login.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/security/login.html.twig
@@ -7,6 +7,8 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-3">
+            <div class="box box-primary">
+                
                 {% if error %}
                     <div class="alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
@@ -14,7 +16,7 @@
                 <div class="box-header with-border">
                     <h3 class="box-title">Sign in to start your session</h3>
                 </div>
-                <form role="form" action="{{ path('acme_users_login_check') }}" method="post">
+                <form class="well form-horizontal" role="form" action="{{ path('acme_users_login_check') }}" method="post">
                     <div class="box-body">
                          <div class="form-group">
                             <label for="username">Username:</label>
@@ -34,6 +36,7 @@
                     </div>
 
                 </form>
+            </div>
             </div>
         </div>
     </section>
