--- a/src/Acme/UsersBundle/Resources/views/Users/edit.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/Users/edit.html.twig
@@ -7,13 +7,17 @@
     <section class="content">
         <div class="row">
             <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-3">
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Edit user</h3>
+                </div>
                 <form class="well form-horizontal" action="" method="post" {{ form_enctype(form) }}>
-                    <fieldset>
+                    <div class="box-body">
                         <div class="form-group {% if form.user.name.vars.valid==false %}has-error{% endif %}">
                             {{ form_label(form.user.name, 'Username', {'label_attr': {'class': 'control-label'}}) }}
                             <div class="controls">
-                                {{form_widget(form.user.name)}}
+                                {{form_widget(form.user.name, { 'attr': {'class': 'form-control'} })}}
                                 {% if form.user.name.vars.valid==false %}
                                     <div class="help-block">
                                         {{ form_errors(form.user.name) }}
@@ -24,14 +28,14 @@
                         <div class="form-group {% if form.user.password.vars.valid==false %}has-error{% endif %}">
                             {{ form_label(form.user.password, 'Password', {'label_attr': {'class': 'control-label'}}) }}
                             <div class="controls">
-                                {{form_widget(form.user.password.password)}}
+                                {{form_widget(form.user.password.password, { 'attr': {'class': 'form-control'} })}}
                                 {% if form.user.password.password.vars.valid==false %}
                                     <div class="help-block">
                                         {{ form_errors(form.user.password.password) }}
                                     </div>
                                 {% endif %}
                                 <br />
-                                {{form_widget(form.user.password.confirm)}}
+                                {{form_widget(form.user.password.confirm, { 'attr': {'class': 'form-control'} })}}
                                 {% if form.user.password.confirm.vars.valid==false %}
                                     <div class="help-block">
                                         {{ form_errors(form.user.password.confirm) }}
@@ -41,9 +45,12 @@
                             </div>
                         </div>
                         {{ form_rest(form) }}
+                        </div>
+                        <div class="box-footer">
                         <input type="submit" class="btn btn-primary" />
-                </fieldset>
+                        </div>
                 </form>
+            </div>
             </div>
         </div>
     </section>
