--- a/src/Acme/UsersBundle/Resources/views/Users/show.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/Users/show.html.twig
@@ -12,7 +12,7 @@
                 <a href="{{ path('logout') }}" class="btn btn-primary">Logout</a>
                 <hr />
                 {% for flash_message in app.session.flashbag.get('notice') %}
-                <div class="callout callout-info lead">
+                <div class="callout callout-info lead alert-success">
                     {{ flash_message }}
                 </div>
                 {% endfor %}
