add uniq and error message

--- a/src/Acme/UsersBundle/Resources/views/Users/create.html.twig
+++ b/src/Acme/UsersBundle/Resources/views/Users/create.html.twig
@@ -23,6 +23,7 @@
                             {{ form_label(form.user.name, 'Username', {'label_attr': {'class': 'control-label'}}) }}
                             <div class="controls">
                                 {{form_widget(form.user.name, { 'attr': {'class': 'form-control'} })}}
+                                {{ form_errors(form) }}
                                 {% if form.user.name.vars.valid==false %}
                                     <div class="help-block">
                                         {{ form_errors(form.user.name) }}
